builder sidebar collapse button design fixed

--- a/assets/css/admin.scss
+++ b/assets/css/admin.scss
@@ -2330,25 +2330,49 @@
 						background: #f6f7f9;
 						position: fixed;
 						bottom: 100px;
-						left: 559px;
 						border-style: solid;
 						border-width: 1px 1px 1px 0px;
 						border-color: #cdd0d8;
 						border-radius: 0 3px 3px 0;
 						z-index: 1;
 						cursor: pointer;
-						transition: all .3s ease-in-out;
 
-						@media screen and (max-width: 960px) {
-							left: 315px;
+						&.close {
+							left: 559px;
+
+							@media screen and (max-width: 960px) {
+								left: 315px;
+							}
+	
+							@media screen and (max-width: 782px) {
+								left: 279px;
+							}
+	
+							@media screen and (max-width: 600px) {
+								display: none;
+							}
 						}
 
-						@media screen and (max-width: 782px) {
-							left: 279px;
-						}
+						&.open {
+							left: 160px;
 
-						@media screen and (max-width: 600px) {
-							display: none;
+							svg {
+								transform: rotate(180deg) translateX(2px);
+							}
+
+							&:hover {
+								svg {
+									transform: rotate(180deg) translateX(0px);
+								}
+							}
+
+							@media screen and (max-width: 960px) {
+								left: 36px;
+							}
+
+							@media screen and (max-width: 782px) {
+								left: 0;
+							}
 						}
 
 						svg {
@@ -3032,6 +3056,22 @@
 							 margin: 7px 0 0 0;
 						 }
 					 }
+				 }
+
+				 &-sidebar-content {
+					&.collapsed {
+						.everest-forms-panel-sidebar {
+							width: 0px;
+						}
+
+						.everest-forms-panel-content-wrap {
+							width: 100% !important;
+
+							// @media screen and (max-width: 960px) {
+							// 	width: 100% !important;
+							// }
+						}
+					}
 				 }
 			 }
 
@@ -6304,6 +6344,29 @@
 	 }
  }
 
+
+ @media screen and (max-width: 1226px) {
+	.everest-forms_page_evf-builder {
+		#everest-forms-builder {
+			.everest-forms-nav-wrapper {
+				.evf-forms-nav-right {
+					width: 269px;
+
+					.evf-shortcode-field {
+						input {
+							display: none;
+						}
+
+						button {
+							border-radius: 3px;
+						}
+					}
+				}
+			}
+		}
+	} 
+ }
+
  /**
 	* Small screen optimisation.
 	**/
@@ -6344,6 +6407,33 @@
 			 }
 		 }
 	 }
+ }
+
+
+ @media screen and (max-width: 998px) {
+	.everest-forms_page_evf-builder {
+		#everest-forms-builder {
+			.everest-forms-nav-wrapper {
+				nav.evf-nav-tab-wrapper {
+					width: calc(100% - 269px);
+				}
+
+				.evf-forms-nav-right {
+					width: 269px;
+
+					.evf-shortcode-field {
+						input {
+							display: none;
+						}
+
+						button {
+							border-radius: 3px;
+						}
+					}
+				}
+			}
+		}
+	} 
  }
 
  /**
@@ -6405,27 +6495,7 @@
 						 }
 					 }
 				 }
-			 }
-
-			 .everest-forms-nav-wrapper {
-				 nav.evf-nav-tab-wrapper {
-					 width: calc(100% - 269px);
-				 }
-
-				 .evf-forms-nav-right {
-					 width: 269px;
-
-					 .evf-shortcode-field {
-						 input {
-							 display: none;
-						 }
-
-						 button {
-							 border-radius: 3px;
-						 }
-					 }
-				 }
-			 }
+			 }			 
 
 			 .everest-forms-tab-content {
 				 height: calc(100vh - 172px);
